# Biomechanics_Suite

./: .gitignore  README.md  WINDOWS_HANDOFF.md
.claude/: settings (1).local.json  settings.json  settings.local.json
.claude/commands/: backup.md  create-docs.md
.github/workflows/: build.yml
HPE/: HPE.icns  README.md  build.bat  build.sh  build_cpu.bat  build_gpu.bat  build_python_embed.ps1  config.json  main.js  package-lock.json  package.json  preload.js  requirements_cpu.txt  requirements_gpu.txt
HPE/.claude/: settings.local.json
HPE/renderer/: app.js  index.html  renderer-init-snippet.js  skeleton-renderer.js  skeleton-worker.js  style.css
MotionDigitizer/: MDigi.icns  README.md  calibration-3d-view.html  electron-main.js  index.html  opensim_marker_map.json  opensim_toolkit.py  package-lock.json  package.json
MotionDigitizer/native/: CMakeLists.txt  binding.gyp  binding.sln  build.bat  build_log.txt  opencv_module.BAK  opencv_module.cpp  opencv_module.vcproj  opencv_module.vcxproj  package.json
MotionViewer/: .electronignore  MViewer.icns  README.md  package-lock.json  package.json
VideoSyncLab/: CHANGELOG.md  README.md  VSL.icns  build-portable.js  index.html  main.js  onnx-segmentation.js  package-lock.json  package.json  preview.html  renderer.js  strobe-motion.css  strobe-motion.js  styles.css
docs/: INSTALL_Mac.html  INSTALL_Mac.md  INSTALL_Windows.html  INSTALL_Windows.md
scripts/: build-all-windows.ps1  fetch-hpe-models.ps1  setup-windows.ps1
shared/: electron-utils.js
windows-handoff/: README.md  build-all-windows.ps1  fetch-hpe-models.ps1  setup-windows.ps1
(+65 files in other folders)
